# game-asset-tracker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  WARP.md
desktop-app/: AGENTS.md  README.md  package-lock.json  package.json
desktop-app/src/: App.css  App.tsx  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs
desktop-app/src/components/: IngestionForm.tsx  LogViewer.tsx  ResultView.tsx  Settings.tsx
docs/plans/: 2026-01-03-desktop-app-tauri.md
ingestion/: AGENTS.md  DEVELOPMENT.md  EXTENDING.md  README.md  TODO.md  WARP.md  pyproject.toml  requirements.txt
ingestion-scripts/: README.md  WARP.md  ingest.py
ingestion-scripts/fab-scraper/: CHANGELOG.md  CONVERSION_README.md  GUI_FEATURES.md  GUI_README.md  PARALLEL_SCRAPING.md  README.md  TROUBLESHOOTING.md  fab_bandwidth_nonheavy_report.jsonl  fab_bandwidth_report.jsonl  fab_bench_block.json  fab_bench_urls.json  generate_fab_auth.py  generate_fab_auth_cdp.py  scrape_fab_metadata.py  scraper_gui.py
ingestion-scripts/fab-scraper/post_processing/: README.md
ingestion-scripts/fab-scraper/scraping/: README.md
ingestion-scripts/fab-scraper/setup/: README.md  convert_cookies.py  extract_urls_console.js
ingestion-scripts/unity-scraper/: README.md  scrape_unity_metadata.py
ingestion-scripts/unity-scraper/docs/: README.md
ingestion-scripts/unity-scraper/post_processing/: README.md
ingestion-scripts/unity-scraper/scraping/: scrape_unity_metadata.py
ingestion-scripts/unity-scraper/setup/: README.md
ingestion/asset_scraping/: README.md  asset_scraper.py  platforms.json  requirements.txt  test_checkboxes.py
ingestion/docs/: PHASE_2_FAB_INTEGRATION.md  PHASE_2_PROMPT.md  PHASE_3_DOWNLOAD_STRATEGY.md  PHASE_3_PROMPT.md  PHASE_4_DOCUMENTATION.md  PHASE_4_PROMPT.md  PHASE_5_PROMPT.md  PHASE_5_UAS_INTEGRATION.md
ingestion/examples/: custom_source.py  fab_ingestion.py  fab_metadata_only.py  fab_with_manifests.py  filesystem_basic.py  uas_ingestion.py
ingestion/scripts/: README.md  prepare-release.sh  switch-deps.sh
ingestion/src/game_asset_tracker_ingestion/: __init__.py  cli.py  gui_helper.py  metadata.py  pipeline.py  registry.py  scanner.py  types.py  validator.py
ingestion/src/game_asset_tracker_ingestion/core/: __init__.py  validator.py
ingestion/src/game_asset_tracker_ingestion/sources/: __init__.py  base.py
ingestion/src/game_asset_tracker_ingestion/transformers/: __init__.py  base.py
ingestion/tests/: __init__.py  test_fab_platform.py  test_scanner.py  test_uas_platform.py
ingestion/unreal/: suburbs_manifest
ingestion/unreal/manifest-parser/: README.md  parse_binary_manifest.py  suburbs_manifest_compressed  suburbs_minimal.json  suburbs_test.json
ingestion/unreal/vault-parser/: README.md  ingest_vault.py
obsidian-plugin/: .gitignore  AGENTS.md  QUICKSTART.md  README.md  WARP.md  esbuild.config.mjs  example-manifest.json  manifest.json  package.json
obsidian-plugin/src/: DashboardView.tsx  database.ts  main.ts  types.ts  utils.ts
schemas/: README.md  example-manifest.json  manifest.schema.json
